2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/backupcopy.c:
   Add new GeanyFunctions API.
 * Makefile.am:
   Add dist-bzip2 and sign targets.
 * configure.in:
   Explicitly depend on Geany >= 0.15.
 * makefile.win32:
   Make Windows Makefile working.
 * README:
   Update and reformat into reST text.
 * configure.in, Makefile.am:
   Remove unnecessary intltool dependency.
 * Initial release: backupcopy 0.1.


2008-04-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *:
   Initial import of backupcopy plugin.
